--- a/src/index.css
+++ b/src/index.css
@@ -176,3 +176,113 @@
       -2.6em 0em 0 0em rgba(255, 255, 255, 0.7), -1.8em -1.8em 0 0em #ffffff;
   }
 }
+
+.box {
+  height: 100px;
+  width: 100px;
+  background-color: #5c57a2;
+  border-radius: 4%;
+}
+.box_ {
+  height: 100px;
+  width: 100px;
+  background-color: #d8b2d4;
+  border-radius: 4%;
+}
+
+@keyframes box1 {
+  0%,
+  25% {
+    translate: 0px;
+  }
+  50% {
+    translate: 0px -125px;
+  }
+  75% {
+    translate: 290px -125px;
+  }
+
+  100% {
+    translate: 290px 0px;
+  }
+}
+
+@keyframes box2 {
+  0%,
+  25% {
+    translate: 0px;
+  }
+  50% {
+    translate: 0px 125px;
+  }
+  75% {
+    translate: 290px 125px;
+  }
+
+  100% {
+    translate: 290px 0px;
+  }
+}
+
+@keyframes box3 {
+  0%,
+  25% {
+    translate: 0px;
+  }
+  50% {
+    translate: 0px -125px;
+  }
+  75% {
+    translate: -290px -125px;
+  }
+
+  100% {
+    translate: -290px 0px;
+  }
+}
+@keyframes box4 {
+  0%,
+  25% {
+    translate: 0px;
+  }
+  50% {
+    translate: 0px 125px;
+  }
+  75% {
+    translate: -290px 125px;
+  }
+
+  100% {
+    translate: -290px 0px;
+  }
+}
+
+.pos1 {
+  animation: box1 2s infinite alternate;
+}
+.pos2 {
+  animation: box2 2s infinite alternate;
+}
+.pos3 {
+  animation: box3 2s infinite alternate;
+}
+.pos4 {
+  animation: box4 2s infinite alternate;
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-track {
+  background: #050816;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #555;
+  border-radius: 7px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: white;
+}
